Added producer management